-c fix footer contact us btn spacing

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -125,7 +125,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-right: 1rem;
+  padding-bottom: 2rem;
 }
 
 .footer-links {
@@ -192,6 +192,7 @@ footer {
     flex-direction: row;
   }
   .footer-contact {
+    padding-right: 1rem;
     padding-bottom: 0;
   }
   .footer-socials {
